Fixed overflowing content.

--- a/src/app/core/components/navigation/navigation.component.scss
+++ b/src/app/core/components/navigation/navigation.component.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100vw;
+  // width: 100vw;
   height: 100px;
   padding: 0 2em;
   & > a {
