--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,5 +1,5 @@
-.container {
+.carousel-container {
   display: block;
   height: calc(100vh - 100px);
-  width: 100vw;
+  // width: 100vw;
 }
